# snake-entity-component-system-example-by-claude

./: pyproject.toml  snake.py
